<resources>
    <string name="app_name">도로파손 수집용 앱</string>

    <!--인트로 화면 텍스트 모음-->
    <string name="intro_logo">도로파손 수집용 앱</string>
    <string name="login_version_text">버전 1.0.0</string>
    <!--로그인 화면 텍스트 모음-->
    <string name="login_logo">도로파손 수집용 앱</string>
    <string name="login_id_text">아이디</string>
    <string name="login_pw_text">비밀번호</string>
    <string name="login_auto_login">자동 로그인</string>
    <string name="login_login_text">로그인</string>
    <!--메인 화면 텍스트 모음-->
    <string name="history_example_date">2021-07-05</string>
    <string name="history_record_text">촬영하기</string>
    <string name="history_record_sub_text">이상노면을 촬영하고 \n리워드 포인트를 쌓아보세요</string>
    <string name="history_data_title_text">노면 촬영 이력</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!--메인화면 메뉴 텍스트 모음-->
    <string name="history_menu_title_text">설정</string>
    <string name="history_menu_reward_text">리워드 정산</string>
    <string name="history_menu_guide_line_text">유효선 재설정</string>
    <string name="history_menu_my_info_text">내정보</string>
    <string name="history_menu_use_guide_text">이용방법</string>
    <string name="history_menu_noti_text">공지사항</string>
    <string name="history_menu_sync_text">서버 동기화</string>
    <string name="history_menu_logout_text">로그아웃</string>

</resources>