<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/title_top_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/version_top_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92"/>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/login_logo"
        android:textStyle="bold"
        android:textColor="#004EA2"
        android:gravity="center|bottom"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/title_top_guideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/notiTv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text=""
        android:textColor="#990000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintStart_toStartOf="@id/idEt"
        app:layout_constraintEnd_toEndOf="@id/idEt"
        app:layout_constraintBottom_toTopOf="@id/idEt"/>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_input_top_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"/>

    <EditText
        android:id="@+id/idEt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:paddingStart="25dp"
        android:maxLength="20"
        android:hint="@string/login_id_text"
        android:background="@drawable/editbox_login_id"
        app:layout_constraintTop_toBottomOf="@id/id_input_top_guideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pwEt"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="w,1:6"/>

    <EditText
        android:id="@+id/pwEt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:paddingStart="25dp"
        android:maxLength="20"
        android:hint="@string/login_pw_text"
        android:inputType="textPassword"
        android:background="@drawable/editbox_login_id"
        app:layout_constraintTop_toBottomOf="@id/idEt"
        app:layout_constraintStart_toStartOf="@id/idEt"
        app:layout_constraintEnd_toEndOf="@id/idEt"
        app:layout_constraintDimensionRatio="w,1:6"/>

    <ToggleButton
        android:id="@+id/autoLoginBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:textOff=""
        android:textOn=""
        android:background="@drawable/check_bt_disable"
        app:layout_constraintTop_toBottomOf="@id/pwEt"
        app:layout_constraintStart_toStartOf="@id/pwEt"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:text="@string/login_auto_login"
        android:gravity="center|start"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@id/autoLoginBt"
        app:layout_constraintStart_toEndOf="@id/autoLoginBt"
        app:layout_constraintBottom_toBottomOf="@id/autoLoginBt"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttons_blue_bg"
        android:text="@string/login_login_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/autoLoginBt"
        app:layout_constraintStart_toStartOf="@id/idEt"
        app:layout_constraintEnd_toEndOf="@id/idEt"
        app:layout_constraintDimensionRatio="w, 1:6"/>

    <TextView
        android:id="@+id/versionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/login_version_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#99B8DA"
        app:layout_constraintTop_toBottomOf="@id/version_top_guideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>