<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainStartGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainEndGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainTopGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainListTopGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recordLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/blue_bg"
        app:layout_constraintTop_toTopOf="@id/mainTopGl"
        app:layout_constraintStart_toStartOf="@id/mainStartGl"
        app:layout_constraintEnd_toEndOf="@id/mainEndGl"
        app:layout_constraintHeight_percent="0.2">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/recordTextStartGl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/recordTextTopGl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/recordTextBottomGl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|start"
            android:text="@string/history_record_text"
            android:textColor="#454F63"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/recordTextTopGl"
            app:layout_constraintStart_toStartOf="@id/recordTextStartGl"
            app:layout_constraintEnd_toStartOf="@id/waveBlue"
            app:layout_constraintBottom_toTopOf="@id/recordTextBottomGl"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/history_record_sub_text"
            android:textSize="13sp"
            android:textColor="#706D6D"
            app:layout_constraintTop_toBottomOf="@id/recordTextBottomGl"
            app:layout_constraintStart_toStartOf="@id/recordTextStartGl"
            app:layout_constraintEnd_toStartOf="@id/waveBlue"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.skyfishjy.library.RippleBackground
            android:id="@+id/waveBlue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:rb_color="#004EA2"
            app:rb_radius="12dp"
            app:rb_rippleAmount="4"
            app:rb_duration="3000"
            app:rb_scale="5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"/>


        <ImageView
            android:id="@+id/bluePlayBt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/blue_play_bt"
            app:layout_constraintTop_toTopOf="@id/waveBlue"
            app:layout_constraintStart_toStartOf="@id/waveBlue"
            app:layout_constraintEnd_toEndOf="@id/waveBlue"
            app:layout_constraintBottom_toBottomOf="@id/waveBlue"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintDimensionRatio="1:1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/history_data_title_text"
        android:gravity="center|start"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#515151"
        app:layout_constraintStart_toStartOf="@id/mainStartGl"
        app:layout_constraintEnd_toEndOf="@id/mainEndGl"
        app:layout_constraintBottom_toTopOf="@id/mainListTopGl"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mainListTopGl"
        app:layout_constraintStart_toStartOf="@id/mainStartGl"
        app:layout_constraintEnd_toEndOf="@id/mainEndGl"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            style="@style/myRecyclerViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/no_data_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/no_data_bg"/>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>